@@ -193,7 +193,7 @@ def main_menu():
     xml = client.request('http://s135598769.onlinehome.us/mgtv.xml')
 
     mgtv = client.parseDOM(xml, 'title')[0]
-    livetv_url = client.parseDOM(xml, 'url')[0]
+    livetv_url = 'http://94.130.180.175:8081/live/greektv/playlist.m3u8'
     mgr = client.parseDOM(xml, 'title')[1]
     radio_url = 'http://94.130.180.175:8000/live.m3u'
     center_ville_url = 'http://mediacast.b2b2c.ca:8010/'
