@@ -1,3 +1,6 @@
+[B]2.1.2[/B] - 30-01-2018
+- Updated video stream url
+
 [B]2.1.1[/B] - 27-01-2018
 - Updated radio stream url
 
